# TRPO

./: .gitignore  activity_sockets.xml  activity_telephony.xml  blas_test  blas_test.c  branch1.txt  matrix.c  matrix.txt
fake_lib/: fakeblas.c
lab_syrk/: .gitignore  CMakeLists.txt  README.md
lab_syrk/bench/: bench_syrk.cpp
lab_syrk/include/: syrk.hpp
lab_syrk/src/: main.cpp  syrk.cpp
lab_syrk/tests/: test_syrk.cpp
tests/: all_cblas_tests.c  all_tests  coverage.functions.html  coverage.html  coverage.test_dgemm.c.d935ec160a9886bb5c10d1d292ee1465.html  test_cov  test_cov-test_dgemm.gcda  test_cov-test_dgemm.gcno  test_dgemm  test_dgemm.c
